<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/rlLembur"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="4">
            <TextView
                android:textSize="15sp"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:text="@string/Notifikasi"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="4">
            <TextView
                android:textSize="15sp"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:text="@string/suara"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="4">
            <TextView
                android:textSize="15sp"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:text="@string/getar"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="4">
            <TextView
                android:textSize="15sp"
                android:layout_weight="3"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:text="@string/pl"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="8">
            <TextView
                android:textSize="15sp"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:text="@string/off"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="8">
            <TextView
                android:textSize="15sp"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:text="@string/led"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:weightSum="8">
            <TextView
                android:textSize="15sp"
                android:layout_weight="7"
                android:layout_width="0dp"
                android:text="@string/passcode"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
            <CheckBox
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btKELUAR"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/logout"/>
</LinearLayout>